# DBusServiceModel

./: README.md
cgen/commonapi-generator/configuration/org.eclipse.osgi/: framework.info.23
cgen/commonapi-generator/configuration/org.eclipse.osgi/.manager/: .fileTable.23  .fileTable.24  .fileTable.28  .fileTable.29
cgen/commonapi_dbus_generator/configuration/org.eclipse.osgi/: framework.info.18
cgen/commonapi_dbus_generator/configuration/org.eclipse.osgi/.manager/: .fileTable.18  .fileTable.19
fidl/: calculatorservice.fidl
src/: CMakeLists.txt
src-gen/v1/com/luxoft/calculatorservice/: CalculatorService.hpp  CalculatorServiceDBusDeployment.cpp  CalculatorServiceDBusDeployment.hpp  CalculatorServiceDBusProxy.cpp  CalculatorServiceDBusProxy.hpp  CalculatorServiceDBusStubAdapter.cpp  CalculatorServiceDBusStubAdapter.hpp  CalculatorServiceProxy.hpp  CalculatorServiceProxyBase.hpp  CalculatorServiceStub.hpp  CalculatorServiceStubDefault.cpp  CalculatorServiceStubDefault.hpp
src/calculatorservice/: CMakeLists.txt  CalculatorServiceStubImpl.cpp  CalculatorServiceStubImpl.hpp  CalculatorServiceTasks.cpp  CalculatorServiceTasks.hpp  DBusCalculatorService.cpp  DBusCalculatorService.hpp  DBusService.hpp  Service.hpp  SyncQueue.hpp  Task.hpp  TaskManager.hpp  main.cpp
src/client/: CMakeLists.txt  Client.cpp  ClientCalculatorDBusService.cpp  ClientCalculatorDBusService.hpp  ClientService.hpp  DBusClientService (copy).hpp  DBusClientService.hpp  ServiceMethodCaller.hpp  client_calculator_dbus_service.cc  client_calculator_dbus_service.h  main.cc  main.cpp
src/cmake_includes/: DBusSets.txt
src/service/: CMakeLists.txt  CalculatorServiceStubImpl.cpp  CalculatorServiceStubImpl.hpp  CalculatorServiceTasks.cpp  CalculatorServiceTasks.hpp  DBusCalculatorService.cpp  DBusCalculatorService.hpp  TaskManager.hpp  calculator_service_stub_impl.cc  calculator_service_stub_impl.h  calculator_service_tasks.cc  calculator_service_tasks.h  dbus_calculator_service.cc  dbus_calculator_service.h  main.cc  main.cpp  task.h  task_consumer_producer_queue.cc  task_consumer_producer_queue.h  task_manager.cc  task_manager.h  task_solver.cc  task_solver.h  task_synchronical_queue.cc  task_synchronical_queue.h
src/service/include/: DBusService.hpp  Service.hpp  SyncQueue.hpp  Task.hpp  dbus_service.h  service.h  task.h
